# peft_llama

./: .gitignore  README.md  compare_answer.sh  eval_and_compare.sh  init_vicuna_weight.py  minienv.yaml  pretrain_558k_blip_proj.sh  pretrain_blip_proj.sh  pretrain_seg_proj.sh  pyproject.toml  reproduce_pretrain.sh  reproduce_staege_2.sh  setup.sh  stage1_eval.sh  stage2_blip_instruct.sh  stage2_blip_textvqa.sh  stage2_mixed_blip_instruct.sh  stage2_seg.sh
evalOCR/: blip_eval.py  eval.py  eval.sh  eval_blip.py  eval_onestage_peft.py  eval_peft.py  fixedeval.py  instructblip.py  instructblip_eval.py  play.py
evalOCR/datasets/: vqa_dataset.py
llava/: conversation.py  utils.py
llava/eval/: evaluation.py  evaluation_ins.py  evaluation_judged_by_gpt.py  evaluation_peft.py  run_llava.py  run_llava_blip.py  run_llava_holistic.py  run_llava_peft.py  run_llava_seg.py  summarize_gpt_review.py
llava/model/: Qformer.py  base_model.py  blip2.py  blip2_infer.py  blip_llama copy.py  blip_llama.py  blip_llama_infer.py  eva_vit copy.py  eva_vit.py  eva_vit_infer.py  make_delta.py  mask_model.py  modeling_llama.py  registry.py
llava/train/: llama_flash_attn_monkey_patch.py  peft_train.py  peft_train_llama.py  peft_train_llama_accelerate.py  peft_train_llama_modeling.cpython-310.py  peft_train_llama_modeling.cpython-39.py  peftacc_train_llama_seg.py  sophia.py  train.py  train_blip_projection.py  train_insblip_peft.py  train_mem.py  train_projection.py
outputs/gpt_eval_compare/: owl_vs_blip_epoch1.jsonl  owl_vs_instruct_blip_1_10_finetune.jsonl  owl_vs_llava.jsonl  (+4 more)
(+3 files in other folders)
